# topology-aware-walsh-fourier-penalization

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: compute_cplex_baselines.py
data/classical_baselines/: cplex_optima.csv
data/mis_instances/: 1tc.16.txt  1tc.32.txt  1tc.64.txt
examples/fourier_projection/: minimal_exact_projection.py  mixed_constraint_blp.py  sampled_importance_projection.py
experiments/: README.md  __init__.py  compare_methods_baseline.py  compare_methods_embedding.py  compare_up_projection.py  dwave_bench.py  experiment_config.py  measure_definitions.py  tune_multipliers.py
experiments/manifests/: __init__.py  create_instance_seed_manifest.py  shared_eval_seed_manifest.csv  shared_eval_seed_manifest_cplex_optima.csv  shared_eval_seed_manifest_metadata.json
experiments/results/: __init__.py  aggregate_cop_tables.py  analyze_dwave_bench.py
experiments/tunings/: projected_combo_selection_summary.csv  (+4 more)
fourier_projection/: README.md  __init__.py  bin_weights.py  blp.py  characteristic_inversion.py  greedy_mapping.py  measures.py  penalties.py  projection.py  sampling.py  topology.py
plots/: README.md  __init__.py  compare_before_after.py  compare_before_after_mean.py  compare_full_vs_unbalanced.py  compare_full_vs_unbalanced_mean.py  compare_up_projection_before_after.py  export_compare_qpu_gap_sample_stats_table.py  export_compare_up_projection_cop_table.py  heatmap_layout.py  paper_artifacts.py  plot_measures.py  plot_slack_dist.py
scripts/: create_dwave_bench_zip.sh  regenerate_paper_figures.py
(+84 files in other folders)
